unpackaged/objects/scorm_engine__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_External_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable_External_Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Salesforce_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable_Salesforce_Content</label>
        <type>Checkbox</type>
    </fields>
    <label>Scorm engine</label>
</CustomObject>